fixed spacing

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -3140,6 +3140,8 @@ input.submit-button-newitem {
   margin-top: 2px;
   margin-bottom: 2px;
   margin-left: 0px;
+  padding-right:5px; 
+  margin-right: 10px;
   font-size: 16px;
   text-align: center;
   transition: 1s background-color;
